Move link variable from modpack content to client config Added helper file version variable `DO_NOT_CHANGE_IT`, as the name suggests, you shouldn't touch it. Standardize mods directory Little clean ups